css/style.css
/* ... */
.book-club {
    background-image: url(../assets/images/dragonbooks.jpeg);
    height: 650px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    object-fit: fill;
    
}

.email  {
    text-align: center;
    padding: 2%;
    margin: 2px;
    font-size: 25px;
}

input[type=submit] {
	margin-top: 20px;
	margin-left: 1rem;
	padding: 8px;
	background-color: #719B43;
	color: white;
	border: none;
	border-radius: 7px;}

#email-field {
    border: solid 1px #719B43;
    border-radius: 5px;
    height: 30px;    
    text-align: left;
}
form > p {
    margin: 40px;
    color: #4a4a4a;
    font-size: larger;
    box-sizing: content-box;
    border: 1px solid #888E8E;
    border-radius: 10px;
    padding: 2%;
}
form > h2 {
    margin-top: 5%;
    
}
.reviews {
    font-family: cursive;
    color: #888E8E;
    margin-bottom: 20px;
    text-align: center;
    position: relative;
    text-transform: none;
    font-size: 25px;
    letter-spacing: 2px;
}

/* meetup times*/

.meetup-times {
    list-style-type: none;
    box-sizing: content-box;
    border: 1px solid green;
    border-radius: 5px;
    padding: 10px;
    width: 500px;
    margin-left: 32.5%;
    margin-bottom: 35px;
}
.map {
    margin-left: 15%;
}  

/*form dump styles*/
#thanks {
    background-image: url(../assets/images/thanks2.jpeg);
    height: 750px;
    width: 70%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    margin-left: 15%;
    background-blend-mode: darken;
}

/*media queries*/

/* For large to medium screens sizes from 1440px wide and down */
@media screen and (max-width: 1440px){
    
    
    .biography {
        padding: 30px 0;
        margin-top: 0;
    }

    .column2 {
        margin-left: 17%;
    }
    section iframe {
        width: 60%;
        margin-left: 10%;
    }
    
}
/* For large to medium screens sizes from 1024px wide and down */
@media screen and (max-width: 1024px) {
    
    hr {
        display: none;
   
    }
    header p {
        max-width: 20%;
        font-size: 10px;
        flex: 0 0 50%;
        margin-left: 3%;
    }
   .row img {
       max-height: 400px;
       max-width: 500px;
   }
   .reviews {
       width: 50%;
       margin-left: 40%;
       margin-top: -8%;   
    }

   .row2 {
       margin-left: -85px;
   }
   #castle {
       margin-top: 5%;

   }
   .meetup-times {
    border-radius: 2px;
    box-sizing: border-box;
    color: gray;
    font-size: 20px;
    margin-left: 20%;
    padding-bottom: 5px;
    padding-top: 5px;
    width: 60%;
   }   
   section iframe {
    width: 80%;
    margin-left: 70px;
}
}
/* For medium to small tablet screens sizes from 768px wide and down */
@media screen and (max-width: 768px){
    #menu-bar  {
        display: flex;
        flex-direction: column-reverse;
        float: right;
        line-height: 5px;
        margin-top: 15px;
    }
    header p {
        margin-left: 50px;
        max-width: 30%;
    }
    .book-club {
        display: flex;
        width: 100%;
        height: 450px;
    }
    section iframe {
        width: 80%;
        margin-left: 5px;
    }
    .reviews {
        width: 20%;
        font-size: 18px;
        margin-left: 40%;
        margin-top: -18%;   
     }
    #castle {
        display: flex;
        width: 100%;
        height: 450px;
    }
    #hero-image {
        display: flex;
        width: 100%;
        height: 400px;
        
    }
    .megan {
        max-width: 35%;
        margin-left: 4%;
    }
    #logo {
        max-width: 50%;
        margin-bottom: -10px;
        margin-top: -3px;
    }
    .row img {
        max-height: 300px;
    }
    #robin {
        font-size: 25px;
    }
    #summary {
        font-size: 25px;
    }
    #list {
        font-size: 25px;
    }
    .column2 img {
        width: 100%;
        margin-left: -30px
        
    }
}
/* For medium to small phone screens sizes from 425 wide and down */
@media screen and (max-width: 425px){
    #logo {
        display: flex;
        float: inline-end;
        font-size: xx-large;
        line-height: 40px;
        }
    #menu-bar {
        display: flex;
        align-items: end;
        justify-content: flex-start;
        font-size: smaller;
        float: right;
        padding: 0;
        line-height: 5px;
        }
    .megan {
        font-size: 15px;
        margin-left: 5%;
        margin-bottom: 3px;
        }
    .reviews {
        display: none;
        }
    #hero-image {
        display: flex;
        width: 100%;
        height: 200px;
        margin: 0;
    }
    .column2 img {
        width: 100%;
        margin-left: 10px
        
    }
    .book-club {
        display: flex;
        width: 100%;
        height: 200px;
        margin: 0;
    }
    #enter {
        font-size: 30px;
    }
    input[type=submit] {
        margin-left: -2px;
    }
    .map {
        position: relative;
        height: 0;
        padding-bottom: 55%;
        overflow: hidden;
    }
    .row img {
        height: 200px;
        width: 200px;
    }
    .column-a {
        position: sticky;
        top: 5px;
        left: 5px;
    }
    .column-b {
        position: relative;
        top: 20px;
        right: 20px;
        
    }
    #video {
        position: relative;
        height: 0;
        padding-bottom: 55%;
        overflow: hidden;
    }
    .social-networks {
        font-size: 10px;
    }
    #castle {
        display: flex;
        width: 100%;
        height: 200px;
        margin: 0;
    }
    .column2 img {
        width: 100%;
        margin-left: 0;
        
    }
    .book-club {
        display: flex;
        width: 100%;
        height: 200px;
        margin: 0;
    }
    #enter {
        font-size: 30px;
    }
    input[type=submit] {
        margin-left: 15px;
    }
}
/* ... */

